Fixes module path

--- a/src/00-introduccion.html
+++ b/src/00-introduccion.html
@@ -140,17 +140,17 @@
     </p>
     <ul>
       <li>
-        - unidad, claridad y coherencia en el mensaje que transmiten los
+        unidad, claridad y coherencia en el mensaje que transmiten los
         animadores a la hora de trabajar una consigna (nadie puede dar lo que no
         tiene),
       </li>
-      <li>- adaptación de la consigna a la realidad propia de cada grupo,</li>
+      <li>adaptación de la consigna a la realidad propia de cada grupo,</li>
       <li>
-        - creatividad para que las consignas resulten lo más lúdicas y dinámicas
+        creatividad para que las consignas resulten lo más lúdicas y dinámicas
         posibles (la consigna tiene que ser divertida),
       </li>
       <li>
-        - espacios profundización de la fe a nivel individual y grupal. Siempre,
+        espacios profundización de la fe a nivel individual y grupal. Siempre,
         el encuentro con Jesús nos cambia la vida, por eso habrá que promover
         ese encuentro a través de la oración, el diálogo grupal, la solidaridad
         con los hermanos, la Reconciliación, la Eucaristía, etc
