--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -5,16 +5,14 @@
   </head>
   <body>
     <h1>CONFIANZA</h1>
-    <p>
-      <strong><em>“Animémonos a conﬁar”</em></strong>
-    </p>
-    <p>
+    <strong><em>“Animémonos a conﬁar”</em></strong>
+    <div class="eje">
       <strong>Eje:</strong> Amistad - <strong>Atravesado por:</strong> Lugares,
       tiempos
-    </p>
+    </div>
     <h2>PRINCIPIOS DOCTRINALES</h2>
     <p><strong>ESPÍRITU DE FAMILIA:</strong></p>
-    <ol>
+    <ul>
       <li>
         <strong>24</strong>
         <em
@@ -32,25 +30,25 @@
           nada a medias.</em
         >
       </li>
-    </ol>
+    </ul>
     <h2>ELECCIÓN DE LA CONSIGNA</h2>
     <p>“¿Es ahora el momento adecuado para esta consigna?’”</p>
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
-    <p>
-      El grupo presenta diﬁcultades relacionales entre algunos miembros del
-      grupo
-    </p>
-    <p>
-      Algún Rastreador-Hoguera está pasando por algún momento difícil y el grupo
-      (por desco-
-    </p>
-    <p>nocimiento o incapacidad) no lo acompaña.</p>
-    <p>
-      Uno o más exploradores tiene mucha diﬁcultad a la hora de participar en
-      momentos comu-
-    </p>
-    <p>nes que involucren hablar de ellos mismos frente al grupo.</p>
+    <ul>
+      <li>
+        El grupo presenta diﬁcultades relacionales entre algunos miembros del
+        grupo
+      </li>
+      <li>
+        Algún Rastreador-Hoguera está pasando por algún momento difícil y el
+        grupo (por desconocimiento o incapacidad) no lo acompaña.
+      </li>
+      <li>
+        Uno o más exploradores tiene mucha diﬁcultad a la hora de participar en
+        momentos comunes que involucren hablar de ellos mismos frente al grupo.
+      </li>
+    </ul>
     <h3>- Orientación:</h3>
     <p>
       La conﬁanza se va ganando en base a las actitudes que tenemos hacia los
@@ -125,77 +123,73 @@
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <ul>
       <li>
-        -Los Rastreadores / Hogueras lograron tomar conciencia que la conﬁanza
+        Los Rastreadores / Hogueras lograron tomar conciencia que la conﬁanza
         mutua es un ele- mento esencial para fortalecer la unión del grupo.
       </li>
       <li>
-        - Actuaron con transparencia en todo momento para que los demás les
-        tengan conﬁanza. Lograron sentirse con conﬁanza en su grupo.
+        Actuaron con transparencia en todo momento para que los demás les tengan
+        conﬁanza. Lograron sentirse con conﬁanza en su grupo.
       </li>
     </ul>
     <h2>ACTIVIDADES CENTRALES</h2>
     <ol>
-      <li><strong>1-Construcciones cruzadas</strong></li>
-      <li><strong>2-Muñecos de goma</strong></li>
+      <li><strong>Construcciones cruzadas</strong></li>
+      <li><strong>Muñecos de goma</strong></li>
     </ol>
     <h3>ACTIVIDAD 1: CONSTRUCCIONES CRUZADAS</h3>
-    <ul>
-      <li>
-        <strong>- Orientación:</strong> La actividad busca que el grupo
-        comprenda que la conﬁanza se constru- ye y que son las actitudes lo que
-        hacen al buen clima de grupo.
-      </li>
-    </ul>
+
+    <strong>- Orientación:</strong> La actividad busca que el grupo comprenda
+    que la conﬁanza se constru- ye y que son las actitudes lo que hacen al buen
+    clima de grupo.
+
     <h3>- Actividad:</h3>
     <ol>
       <li>
-        <strong>1.</strong> Cada grupo realiza una construcción diferente. Si en
-        tu Batallón no hay materiales para construcciones o no son cotidianas en
-        las actividades, la idea es realizar algún objeto que después deban usar
-        (pueden intentar hacer una silla o mesa con cajones, por ejemplo)
+        Cada grupo realiza una construcción diferente. Si en tu Batallón no hay
+        materiales para construcciones o no son cotidianas en las actividades,
+        la idea es realizar algún objeto que después deban usar (pueden intentar
+        hacer una silla o mesa con cajones, por ejemplo)
       </li>
       <li>
-        <strong>2.</strong> Explicar que deben ser construcciones a la que se
-        pueda subir alguna persona (mangrullo, plataforma). Avisar que hay poco
-        tiempo, deben hacerlo rápido.
+        Explicar que deben ser construcciones a la que se pueda subir alguna
+        persona (mangrullo, plataforma). Avisar que hay poco tiempo, deben
+        hacerlo rápido.
       </li>
       <li>
-        <strong>3.</strong> Intervenir sólo mínimamente, dejando que la
-        construcción la hagan los chicos (tratar que no sea algo que les resulte
-        muy nuevo o difícil para hacer)
+        Intervenir sólo mínimamente, dejando que la construcción la hagan los
+        chicos (tratar que no sea algo que les resulte muy nuevo o difícil para
+        hacer)
       </li>
       <li>
-        <strong>4.</strong> En algún momento decirles que pasó y que debes irte
-        un tiempo. Encargarles la responsa- bilidad de terminar la construcción
-        (o, para no alejarte del grupo, argumentar que tenés que
+        En algún momento decirles que pasó y que debes irte un tiempo.
+        Encargarles la responsa- bilidad de terminar la construcción (o, para no
+        alejarte del grupo, argumentar que tenés que preparar otra actividad y
+        quedarte cerca leyendo algo).
       </li>
-    </ol>
-    <p>preparar otra actividad y quedarte cerca leyendo algo).</p>
-    <ol>
+      <li>Al retornar plantear la conversación según lo que haya pasado.</li>
       <li>
-        <strong>5.</strong> Al retornar plantear la conversación según lo que
-        haya pasado.
-      </li>
-      <li>
-        <strong>6.</strong> Ver si pudieron hacer lo encomendado, si lo
-        terminaron o falta mucho, si surgió algún in- conveniente.
+        Ver si pudieron hacer lo encomendado, si lo terminaron o falta mucho, si
+        surgió algún in- conveniente.
       </li>
       <li>
-        <strong>7.</strong> Cuando la construcción está terminada,
-        intercambiarse con otro grupo, subiéndose a la construcción del otro
-        grupo y dejando que ellos suban a la del propio grupo.
+        Cuando la construcción está terminada, intercambiarse con otro grupo,
+        subiéndose a la construcción del otro grupo y dejando que ellos suban a
+        la del propio grupo.
       </li>
-      <li><strong>8.</strong> Se verá entonces qué tan bien hechas están.</li>
+      <li>Se verá entonces qué tan bien hechas están.</li>
       <li>
-        <strong>9.</strong> Luego que el otro grupo se subió a la construcción
-        propia, sentarse en ronda y preguntar: ¿Qué pasó cuando otros se subían
-        a nuestra construcción? ¿Se daban cuenta que estaban conﬁando en el
-        trabajo de ustedes? ¿Se sentían responsables de lo que pasara?
+        Luego que el otro grupo se subió a la construcción propia, sentarse en
+        ronda y preguntar:<br />
+        ¿Qué pasó cuando otros se subían a nuestra construcción? <br />¿Se daban
+        cuenta que estaban conﬁando en el trabajo de ustedes? <br />¿Se sentían
+        responsables de lo que pasara?
       </li>
       <li>
-        <strong>10.</strong> Luego de subirse a la construcción que haya hecho
-        otro grupo, preguntar: ¿Quién y por qué se animó a usarla primero? ¿Qué
-        paso con los demás? ¿Esperaste que pasara otro antes que vos?
+        Luego de subirse a la construcción que haya hecho otro grupo,
+        preguntar:<br />
+        ¿Quién y por qué se animó a usarla primero?<br />
+        ¿Qué paso con los demás?<br />
+        ¿Esperaste que pasara otro antes que vos?
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
@@ -226,22 +220,21 @@
       acompañando, aconse- jando, sin caer en el “amiguismo” con el cual sólo
       logramos un alejamiento a la primera diﬁcultad.
     </p>
-    <h3>Palabra de Dios: Un ciego no puede guiar (Lc 6, 39)</h3>
+    <div class="god">
+      <h3>Palabra de Dios: Un ciego no puede guiar (Lc 6, 39)</h3>
+      <p>
+        <em
+          >«Les hizo también esta comparación: “¿Puede un ciego guiar a otro
+          ciego? ¿No caerán los dos en un pozo?”.»</em
+        >
+      </p>
+    </div>
+
     <p>
-      <em
-        >«Les hizo también esta comparación: “¿Puede un ciego guiar a otro
-        ciego? ¿No caerán los dos en un pozo?”.»</em
-      >
-    </p>
-    <ul>
-      <li>
-        <strong>- Aclaración:</strong> La idea de la Palabra de Dios es
-        relacionar la idea de “ceguera” con la falta de
-      </li>
-    </ul>
-    <p>
-      conﬁanza. ¿Podemos contar con alguien en que no conﬁamos? ¿Podemos guiar,
-      hacer un bien, sin ser dignos de conﬁanza del otro?
+      <strong>- Aclaración:</strong> La idea de la Palabra de Dios es relacionar
+      la idea de “ceguera” con la falta de conﬁanza. ¿Podemos contar con alguien
+      en que no conﬁamos? ¿Podemos guiar, hacer un bien, sin ser dignos de
+      conﬁanza del otro?
     </p>
     <h3>ACTIVIDAD 2: MUÑECOS DE GOMA</h3>
     <h3>- Orientación:</h3>
@@ -252,32 +245,35 @@
     <h3>- Actividad:</h3>
     <ol>
       <li>
-        <strong>1.</strong> Armar una ronda con los miembros del grupo y colocar
-        a uno en el centro, con los ojos vendados.
+        Armar una ronda con los miembros del grupo y colocar a uno en el centro,
+        con los ojos vendados.
       </li>
       <li>
-        <strong>2.</strong> A la señal, se deja caer hacia los lados y los demás
-        deben sostenerlo para que no se caiga.
+        A la señal, se deja caer hacia los lados y los demás deben sostenerlo
+        para que no se caiga.
       </li>
       <li>
-        <strong>3.</strong> Repetir lo mismo hasta que todos los miembros del
-        grupo pasan por el centro.
+        Repetir lo mismo hasta que todos los miembros del grupo pasan por el
+        centro.
       </li>
       <li>
-        <strong>4.</strong> Sentarse en ronda y hacer algunas preguntas: ¿Cómo
-        se sintieron? ¿Dudaron? ¿Por qué? ¿Qué sentían al largarse? ¿Qué sentían
-        al ser atajados?
+        Sentarse en ronda y hacer algunas preguntas:<br />
+        ¿Cómo se sintieron?<br />
+        ¿Dudaron? ¿Por qué?<br />
+        ¿Qué sentían al largarse?<br />
+        ¿Qué sentían al ser atajados?
       </li>
-      <li><strong>5.</strong> Conversar sobre las distintas actitudes.</li>
+      <li>Conversar sobre las distintas actitudes.</li>
       <li>
-        <strong>6.</strong> Marcar el contraste entre la primer sensación al
-        largarse y la sensación posterior al ser atajados
+        Marcar el contraste entre la primer sensación al largarse y la sensación
+        posterior al ser atajados
       </li>
       <li>
-        <strong>7.</strong> Que cada uno cuente de alguien en quién confía y
-        sabe que no le va a fallar. ¿Qué cosa de esa persona te hace sentirle
-        conﬁanza? ¿Te pasó alguna vez de no entender o no estar de acuerdo, pero
-        conﬁar igual en esa persona?
+        Que cada uno cuente de alguien en quién confía y sabe que no le va a
+        fallar.<br />
+        ¿Qué cosa de esa persona te hace sentirle conﬁanza?<br />
+        ¿Te pasó alguna vez de no entender o no estar de acuerdo, pero conﬁar
+        igual en esa persona?
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
@@ -299,33 +295,64 @@
       nada en común. En la medida que se conoce a los demás y se aﬁanza la
       amistad, cada vez se puede conﬁar más.
     </p>
-    <h3>Palabra de Dios:</h3>
-    <h3>“Tomas y las llagas” (Jn 20, 19-29)</h3>
-    <p>
-      <em
-        >«Al atardecer de ese mismo día, el primero de la semana, estando
-        cerradas las puertas del lugar donde se encontraban los discípulos, por
-        temor a los judíos, llegó Jesús y poniéndose en medio de ellos, les dĳo:
-        “¡La paz esté con ustedes!”. Mientras decía esto, les mostró sus manos y
-        su costado. Los discípulos se llenaron de algría cuando vieron al Señor.
-        Jesús les dĳo de nuevo: “¡La paz esté con ustedes! Como el Padre me
-        envió a mí, yo también los envío a ustedes”. Al decirles esto, sopló
-        sobre ellos y añadió “Reciban al Espíritu Santo. Los pecados serán
-        perdonados a los que ustedes se los perdonen, y serán retenidos a los
-        que ustedes se los retengan”. Tomás, uno de los Doce, de sobrenombre el
-        Mellizo, no estaba con ellos cuando llegó Jesús. Los otros discípulos le
-        dĳeron: “¡Hemos visto al Señor!”. Él les respondió: “Si no veo la marca
-        de los clavos en sus manos, si no pongo el dedo en el lugar de los
-        clavos y la mano en su costado, no lo creeré”. Ocho días más tarde,
-        estaban de nuevo los discípulos reunidos en la casa, y estaba con ellos
-        Tomás. Entonces apareció Jesús, estando cerradas las puertas, se puso en
-        medio de ellos y les dĳo:”¡La paz esté con ustedes!”. Luego dĳo a Tomás:
-        “Trae aquí tu dedo: aquí están mis manos. Acerca tu mano: Métela en mi
-        costado. En adelante no seas incrédulo, sino hombre de fe”. Tomas
-        respondió: “¡Señor mío y Dios mío!”. Jesús le dĳo: “Ahora crees, porque
-        me has visto. ¡Felices los que creen sin haber visto!”.»</em
-      >
-    </p>
+    <div class="god">
+      <h3>Palabra de Dios:</h3>
+      <h3>“Tomas y las llagas” (Jn 20, 19-29)</h3>
+      <p>
+        <em
+          >«Al atardecer de ese mismo día, el primero de la semana, estando
+          cerradas las puertas del lugar donde se encontraban los discípulos,
+          por temor a los judíos, llegó Jesús y poniéndose en medio de ellos,
+          les dĳo: “¡La paz esté con ustedes!”.</em
+        >
+      </p>
+      <p>
+        <em
+          >Mientras decía esto, les mostró sus manos y su costado. Los
+          discípulos se llenaron de algría cuando vieron al Señor.</em
+        >
+      </p>
+      <p>
+        <em
+          >Jesús les dĳo de nuevo: “¡La paz esté con ustedes! Como el Padre me
+          envió a mí, yo también los envío a ustedes”. Al decirles esto, sopló
+          sobre ellos y añadió “Reciban al Espíritu Santo. Los pecados serán
+          perdonados a los que ustedes se los perdonen, y serán retenidos a los
+          que ustedes se los retengan”.</em
+        >
+      </p>
+      <p>
+        <em
+          >Tomás, uno de los Doce, de sobrenombre el Mellizo, no estaba con
+          ellos cuando llegó Jesús. Los otros discípulos le dĳeron: “¡Hemos
+          visto al Señor!”. Él les respondió: “Si no veo la marca de los clavos
+          en sus manos, si no pongo el dedo en el lugar de los clavos y la mano
+          en su costado, no lo creeré”.</em
+        >
+      </p>
+      <p>
+        <em
+          >Ocho días más tarde, estaban de nuevo los discípulos reunidos en la
+          casa, y estaba con ellos Tomás. Entonces apareció Jesús, estando
+          cerradas las puertas, se puso en medio de ellos y les dĳo:”¡La paz
+          esté con ustedes!”.</em
+        >
+      </p>
+      <p>
+        <em
+          >Luego dĳo a Tomás: “Trae aquí tu dedo: aquí están mis manos. Acerca
+          tu mano: Métela en mi costado. En adelante no seas incrédulo, sino
+          hombre de fe”.</em
+        >
+      </p>
+      <p><em>Tomas respondió: “¡Señor mío y Dios mío!”.</em></p>
+      <p>
+        <em
+          >Jesús le dĳo: “Ahora crees, porque me has visto. ¡Felices los que
+          creen sin haber visto!”.»</em
+        >
+      </p>
+    </div>
     <p>
       <strong>Aclaración:</strong> La conﬁanza real y correspondida nos da
       felicidad. Nos libera y aliviana el camino. Felices los que confían (que
@@ -338,21 +365,21 @@
       de los animadores, porque se trata de un doble proceso que hay que revisar
       y celebrar
     </p>
-    <p>
-      <strong><em>Tomando Mate</em></strong>
-    </p>
+    <h3><em>Tomando Mate</em></h3>
     <p>Comenzamos completando las siguientes frases a modo de evaluación:</p>
-    <p>La preparación de la consigna fue...</p>
-    <p>
-      La preparación de los elementos de cada encuentro (tiempos, lugares,
-      materiales, etc) fue…
-    </p>
-    <p>En esta consigna me costó…</p>
-    <p>
-      Lo que más me gustó fue... Creo que faltó... Lo que me sorprendió... Con
-      ella descubrí que la Conﬁanza... La Conﬁanza entre los Rastreadores /
-      Hogueras es… Por eso, creo que necesito seguir trabajando con ellos en…
-    </p>
+    <ul>
+      <li>La preparación de la consigna fue...</li>
+      <li>
+        La preparación de los elementos de cada encuentro (tiempos, lugares,
+        materiales, etc) fue…
+      </li>
+      <li>En esta consigna me costó…</li>
+      <li>
+        Lo que más me gustó fue... Creo que faltó... Lo que me sorprendió... Con
+        ella descubrí que la Conﬁanza... La Conﬁanza entre los Rastreadores /
+        Hogueras es… Por eso, creo que necesito seguir trabajando con ellos en…
+      </li>
+    </ul>
     <h3>- Reﬂexión:</h3>
     <p>
       Te invitamos a que leas los siguientes extractos de entrevistas al Papa
@@ -364,8 +391,8 @@
         >sotros, Dios tiene esperanza en nosotros, y esto es lo mismo para
         todos. No le desilusionemos. No nos dejem</em
       >
-      os llevar por el miedo: devolvamos conﬁanza con conﬁanza” – Papa
-      Francisco, 2014
+      os llevar por el miedo: devolvamos conﬁanza con conﬁanza”<br />
+      – Papa Francisco, 2014
     </p>
     <p>
       <em
@@ -377,23 +404,30 @@
         al Señor!”</em
       >
     </p>
-    <ul>
-      <li>-Papa Francisco, 2014</li>
-    </ul>
+    <br />
+    - Papa Francisco, 2014
+
     <p>
       La oración del explorador nos dice “Conﬁando Señor, en tu bondad y en tu
       gracia y y en el axilio maternal de Maria… Amén”. En medio de las
       diﬁcultades, cuando creemos que todo está perdido, Dios siempre está y nos
       mueve a tener esperanza. Nos alienta a seguir adelante con la seguridad
-      que Él nos acompaña, asiste y guía. Con humildad, conscientes que solos no
-      podemos, seguimos adelante con la seguridad que si “hacemos lo posible,
-      Dios hará lo imposible”. El potencia nuestro esfuerzo y nos ayuda a
-      crecer, a cambiar, a mejorar. A veces se cae en el peligro de creer que
-      Dios va a intervenir de acuerdo a nuestro deseo, depositamos una conﬁanza
-      equivocada que se sólo se fundamenta en querer tener un Dios a “nuestra
-      medida”. También se suele pensar que Dios va a intervenir mágicamente y
-      resolver todos los problemas que creamos los hombres, y como esto no
-      sucede se le echa la culpa. No es así la conﬁanza que el Papa nos plantea.
+      que Él nos acompaña, asiste y guía.
+    </p>
+    <p>
+      Con humildad, conscientes que solos no podemos, seguimos adelante con la
+      seguridad que si “hacemos lo posible, Dios hará lo imposible”. El potencia
+      nuestro esfuerzo y nos ayuda a crecer, a cambiar, a mejorar.
+    </p>
+    <p>
+      A veces se cae en el peligro de creer que Dios va a intervenir de acuerdo
+      a nuestro deseo, depositamos una conﬁanza equivocada que se sólo se
+      fundamenta en querer tener un Dios a “nuestra medida”.
+    </p>
+    <p>
+      También se suele pensar que Dios va a intervenir mágicamente y resolver
+      todos los problemas que creamos los hombres, y como esto no sucede se le
+      echa la culpa. No es así la conﬁanza que el Papa nos plantea.
     </p>
   </body>
 </html>
