--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>CONFIANZA</h1>
-    <strong><em>“Animémonos a conﬁar”</em></strong>
+    <strong><em>“Animémonos a confiar”</em></strong>
     <div class="eje">
       <strong>Eje:</strong> Amistad - <strong>Atravesado por:</strong> Lugares,
       tiempos
@@ -26,7 +26,7 @@
       <li>
         <strong>79</strong>
         <em
-          >El/La Explorador/a es leal, veraz y digno de conﬁanza; no realiza
+          >El/La Explorador/a es leal, veraz y digno de confianza; no realiza
           nada a medias.</em
         >
       </li>
@@ -37,7 +37,7 @@
     <p>Es el momento propicio para esta consigna porque:</p>
     <ul>
       <li>
-        El grupo presenta diﬁcultades relacionales entre algunos miembros del
+        El grupo presenta dificultades relacionales entre algunos miembros del
         grupo
       </li>
       <li>
@@ -45,19 +45,19 @@
         grupo (por desconocimiento o incapacidad) no lo acompaña.
       </li>
       <li>
-        Uno o más exploradores tiene mucha diﬁcultad a la hora de participar en
+        Uno o más exploradores tiene mucha dificultad a la hora de participar en
         momentos comunes que involucren hablar de ellos mismos frente al grupo.
       </li>
     </ul>
     <h3>- Orientación:</h3>
     <p>
-      La conﬁanza se va ganando en base a las actitudes que tenemos hacia los
+      La confianza se va ganando en base a las actitudes que tenemos hacia los
       demás en nuestra vida cotidiana. Cuando a una persona nos da o le damos
-      conﬁanza y responde como se eperaba, esta conﬁanza se aﬁanzará en
+      confianza y responde como se eperaba, esta confianza se afianzará en
       profundidad y tiempo. ¿Cuáles son estas actitudes? El respeto, las
       palabras de apoyo, gestos y acciones que demuestren comprensión. “El
-      explordor es digno de conﬁanza”, nuestra misma naturaleza de exploradores
-      nos tiene que hacer custodio de la conﬁanza de los demás.
+      explordor es digno de confianza”, nuestra misma naturaleza de exploradores
+      nos tiene que hacer custodio de la confianza de los demás.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos qué te pasa con este tema?”</p>
@@ -66,8 +66,8 @@
       Te pedimos que leas con atención las siguientes palabras de Don Bosco:
     </p>
     <p>
-      “De la familiaridad nace el afecto, el afecto lleva a la conﬁanza; ésta
-      abre los corazones de los jóvenes que maniﬁestan todo a sus maestros, a
+      “De la familiaridad nace el afecto, el afecto lleva a la confianza; ésta
+      abre los corazones de los jóvenes que manifiestan todo a sus maestros, a
       los asistentes y a los superiores. Serán sinceros en todo, estarán
       dispuestos para todo si se dan cuenta de que son amados”
     </p>
@@ -81,54 +81,54 @@
     <p>
       La fórmula es más que sencilla pero fundamental: no basta amar, basta que
       se sientan amdos. En esa reciprocidad está la base fundante de la
-      conﬁanza. En la familiaridad con el grupo, en el compartir la vida (aunque
+      confianza. En la familiaridad con el grupo, en el compartir la vida (aunque
       sea un día a la semana). Cuando uno se da cuenta que es amdo (que se
       preocupan sinceramente, que solo quieren lo mejor para esa persona) la
-      conﬁanza llega al instante. Si nuestro grupo de Rastreadores-Hogueras
-      confía en nosotros y nosotros respondemos responsablemente a esa conﬁanza,
+      confianza llega al instante. Si nuestro grupo de Rastreadores-Hogueras
+      confía en nosotros y nosotros respondemos responsablemente a esa confianza,
       nuestra tarea educadora no solo va a ser mucho más sencilla sino que será
-      realmente salesiana. La conﬁanza se gana con el testimonio que damos,
+      realmente salesiana. La confianza se gana con el testimonio que damos,
       acompañando, aconsejando, sin caer en el innecesario “amiguismo” con lo
       cual solo logramos desdibujar el papel formativo y adulto que debemos
       presentar ante el grupo.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
-    <h3>- Conﬁanza en lo poco y en lo mucho (Lc 16, 10-12)</h3>
+    <h3>- Confianza en lo poco y en lo mucho (Lc 16, 10-12)</h3>
     <p>
       <em
-        >«El que es ﬁel en lo poco, también es ﬁel en lo mucho, y el que es
+        >«El que es fiel en lo poco, también es fiel en lo mucho, y el que es
         deshonesto en lo poco, tabién es deshonesto en lo mucho. Si ustedes no
-        son ﬁeles en el uso del dinero injusto, ¿quién les conﬁará el verdadero
-        bien? Y si no son ﬁeles con lo ajeno, ¿quién les conﬁará lo que les
+        son fieles en el uso del dinero injusto, ¿quién les confiará el verdadero
+        bien? Y si no son fieles con lo ajeno, ¿quién les confiará lo que les
         pertenece a ustedes?.»</em
       >
     </p>
     <h3>- Reﬂexión:</h3>
     <p>
-      El Evangelio nos invita a ser ﬁel en lo poco, en nuestras actitudes
+      El Evangelio nos invita a ser fiel en lo poco, en nuestras actitudes
       cotidianas. Si somos dehonestos en nuestras palabras, momentos
-      compartidos, no podemos esperar ser “dignos de conﬁanza”. Este clima se
+      compartidos, no podemos esperar ser “dignos de confianza”. Este clima se
       construye desde lo pequeño.
     </p>
     <h2>ENTENDIENDOLOS</h2>
     <p>
-      En general, los Rastreadores- Hogueras, buscan aﬁanzarse en el grupo y
+      En general, los Rastreadores- Hogueras, buscan afianzarse en el grupo y
       profundizar sus amistades. Comienzan a descubrir intereses y vivencias
-      comunes que los llevan a relacionarse con los que son más aﬁnes. Tienen
-      conﬁanza con sus amigos más cercanos pero puede costar abrirse al resto
+      comunes que los llevan a relacionarse con los que son más afines. Tienen
+      confianza con sus amigos más cercanos pero puede costar abrirse al resto
       del grupo. Necesitan dialogar con personas cercanas. El grupo exploradoril
       es una gran oportunidad para que encuentren nuevas personas dignas de
-      conﬁanza, fuera de su ámbito cotidiano (escuela, barrio).
+      confianza, fuera de su ámbito cotidiano (escuela, barrio).
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
     <ul>
       <li>
-        Los Rastreadores / Hogueras lograron tomar conciencia que la conﬁanza
+        Los Rastreadores / Hogueras lograron tomar conciencia que la confianza
         mutua es un ele- mento esencial para fortalecer la unión del grupo.
       </li>
       <li>
         Actuaron con transparencia en todo momento para que los demás les tengan
-        conﬁanza. Lograron sentirse con conﬁanza en su grupo.
+        confianza. Lograron sentirse con confianza en su grupo.
       </li>
     </ul>
     <h2>ACTIVIDADES CENTRALES</h2>
@@ -139,7 +139,7 @@
     <h3>ACTIVIDAD 1: CONSTRUCCIONES CRUZADAS</h3>
 
     <strong>- Orientación:</strong> La actividad busca que el grupo comprenda
-    que la conﬁanza se constru- ye y que son las actitudes lo que hacen al buen
+    que la confianza se constru- ye y que son las actitudes lo que hacen al buen
     clima de grupo.
 
     <h3>- Actividad:</h3>
@@ -181,7 +181,7 @@
         Luego que el otro grupo se subió a la construcción propia, sentarse en
         ronda y preguntar:<br />
         ¿Qué pasó cuando otros se subían a nuestra construcción? <br />¿Se daban
-        cuenta que estaban conﬁando en el trabajo de ustedes? <br />¿Se sentían
+        cuenta que estaban confiando en el trabajo de ustedes? <br />¿Se sentían
         responsables de lo que pasara?
       </li>
       <li>
@@ -194,31 +194,31 @@
     </ol>
     <h3>- Reﬂexión:</h3>
     <p>
-      La conﬁanza se construye: La conﬁanza es algo que se va generando con el
+      La confianza se construye: La confianza es algo que se va generando con el
       tiempo y en base a las actitudes y acciones de las personas. Puede tomar
-      mucho tiempo ganarse la conﬁanza del otro. Con algunas acciones podemos
+      mucho tiempo ganarse la confianza del otro. Con algunas acciones podemos
       perderla, pero no quiere decir que no podamos recu- perarla siempre y
-      cuando modiﬁquemos nuestra actitud.
+      cuando modifiquemos nuestra actitud.
     </p>
     <p>
-      No hay que confundir conﬁanza con “me cae bien”. Por supuesto que el
-      simpatizar puede ser una manera de comenzar una relación de conﬁanza, pero
-      la conﬁanza verdadera es algo más profundo que se va ganando de a poco.
+      No hay que confundir confianza con “me cae bien”. Por supuesto que el
+      simpatizar puede ser una manera de comenzar una relación de confianza, pero
+      la confianza verdadera es algo más profundo que se va ganando de a poco.
     </p>
-    <p><strong>Clima de conﬁanza en el grupo:</strong></p>
+    <p><strong>Clima de confianza en el grupo:</strong></p>
     <p>
-      Hay actitudes del grupo que ayudan a que uno tenga conﬁanza y otras que
+      Hay actitudes del grupo que ayudan a que uno tenga confianza y otras que
       tienen el efecto con- trario. Las risas hacia los demás, cargadas y burlas
-      crean desconﬁanza en el que quiere decir algo.
+      crean desconfianza en el que quiere decir algo.
     </p>
     <p>
       El respeto, palabras de apoyo y gestos de comprensión crean un clima de
-      conﬁanza que per- mite que la persona se exprese libremente.
+      confianza que per- mite que la persona se exprese libremente.
     </p>
     <p>
-      En el grupo la conﬁanza se gana con el testimonio que damos diariamente,
+      En el grupo la confianza se gana con el testimonio que damos diariamente,
       acompañando, aconse- jando, sin caer en el “amiguismo” con el cual sólo
-      logramos un alejamiento a la primera diﬁcultad.
+      logramos un alejamiento a la primera dificultad.
     </p>
     <div class="god">
       <h3>Palabra de Dios: Un ciego no puede guiar (Lc 6, 39)</h3>
@@ -232,14 +232,14 @@
 
     <p>
       <strong>- Aclaración:</strong> La idea de la Palabra de Dios es relacionar
-      la idea de “ceguera” con la falta de conﬁanza. ¿Podemos contar con alguien
-      en que no conﬁamos? ¿Podemos guiar, hacer un bien, sin ser dignos de
-      conﬁanza del otro?
+      la idea de “ceguera” con la falta de confianza. ¿Podemos contar con alguien
+      en que no confiamos? ¿Podemos guiar, hacer un bien, sin ser dignos de
+      confianza del otro?
     </p>
     <h3>ACTIVIDAD 2: MUÑECOS DE GOMA</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad invita a la difícil tarea de animarse a conﬁar en los
+      Esta actividad invita a la difícil tarea de animarse a confiar en los
       demás.
     </p>
     <h3>- Actividad:</h3>
@@ -271,29 +271,29 @@
       <li>
         Que cada uno cuente de alguien en quién confía y sabe que no le va a
         fallar.<br />
-        ¿Qué cosa de esa persona te hace sentirle conﬁanza?<br />
-        ¿Te pasó alguna vez de no entender o no estar de acuerdo, pero conﬁar
+        ¿Qué cosa de esa persona te hace sentirle confianza?<br />
+        ¿Te pasó alguna vez de no entender o no estar de acuerdo, pero confiar
         igual en esa persona?
       </li>
     </ol>
     <h3>- Reﬂexión:</h3>
     <p>
-      <em>Animarse a conﬁar en los demás:</em> La conﬁanza depende de las
-      personas. Hay personas a las cuales se le tiene más conﬁanza que a otras,
+      <em>Animarse a confiar en los demás:</em> La confianza depende de las
+      personas. Hay personas a las cuales se le tiene más confianza que a otras,
       según cómo sea y el trato con se tenga con ella. Por ejemplo, a los buenos
-      amigos se le cree y se le tiene conﬁanza no porque lo que digan sea más o
+      amigos se le cree y se le tiene confianza no porque lo que digan sea más o
       menos creíble, sino porque es un buen amigo. Cuando uno se pone de acuerdo
-      con otras personas para hacer algo con un ﬁn común, se hace un acto de
-      conﬁanza: si se tiene conﬁanza en la otra persona, no importa lo fácil o
+      con otras personas para hacer algo con un fin común, se hace un acto de
+      confianza: si se tiene confianza en la otra persona, no importa lo fácil o
       difícil del compromiso, se está seguro que la otra persona lo va a
       realizar.
     </p>
     <p>
       En el grupo, se puede hablar libremente, se puede pedir ayuda, se pueden
       acordar cosas y repartirse responsabilidades siempre y cuando se animen a
-      conﬁar en las otras personas. Si de movida hay desconﬁanza no se logra
-      nada en común. En la medida que se conoce a los demás y se aﬁanza la
-      amistad, cada vez se puede conﬁar más.
+      confiar en las otras personas. Si de movida hay desconfianza no se logra
+      nada en común. En la medida que se conoce a los demás y se afianza la
+      amistad, cada vez se puede confiar más.
     </p>
     <div class="god">
       <h3>Palabra de Dios:</h3>
@@ -354,10 +354,10 @@
       </p>
     </div>
     <p>
-      <strong>Aclaración:</strong> La conﬁanza real y correspondida nos da
+      <strong>Aclaración:</strong> La confianza real y correspondida nos da
       felicidad. Nos libera y aliviana el camino. Felices los que confían (que
       no es ingenuidad) de tal manera que ya no necesitan pruebas para saberlo.
-      Y mucho más felices vamos a ser si somos merecedores de dicha conﬁanza.
+      Y mucho más felices vamos a ser si somos merecedores de dicha confianza.
     </p>
     <h2>EVALUACIÓN</h2>
     <p>
@@ -376,7 +376,7 @@
       <li>En esta consigna me costó…</li>
       <li>
         Lo que más me gustó fue... Creo que faltó... Lo que me sorprendió... Con
-        ella descubrí que la Conﬁanza... La Conﬁanza entre los Rastreadores /
+        ella descubrí que la Confianza... La Confianza entre los Rastreadores /
         Hogueras es… Por eso, creo que necesito seguir trabajando con ellos en…
       </li>
     </ul>
@@ -391,16 +391,16 @@
         >sotros, Dios tiene esperanza en nosotros, y esto es lo mismo para
         todos. No le desilusionemos. No nos dejem</em
       >
-      os llevar por el miedo: devolvamos conﬁanza con conﬁanza”<br />
+      os llevar por el miedo: devolvamos confianza con confianza”<br />
       – Papa Francisco, 2014
     </p>
     <p>
       <em
-        >“Muchas veces conﬁamos en un médico: está bien hacerlo, porque el
-        médico está allí para curar; tenemos conﬁanza en una persona: hermanos,
-        hermanas, que nos pueden ayudar. Está bien tener esta conﬁanza humana
-        entre nosotros. Pero nos olvidamos de la conﬁanza en el Se- ñor: ésta es
-        la clave del éxito en la vida. ¡La conﬁanza en el Señor, encomendémonos
+        >“Muchas veces confiamos en un médico: está bien hacerlo, porque el
+        médico está allí para curar; tenemos confianza en una persona: hermanos,
+        hermanas, que nos pueden ayudar. Está bien tener esta confianza humana
+        entre nosotros. Pero nos olvidamos de la confianza en el Se- ñor: ésta es
+        la clave del éxito en la vida. ¡La confianza en el Señor, encomendémonos
         al Señor!”</em
       >
     </p>
@@ -408,9 +408,9 @@
     - Papa Francisco, 2014
 
     <p>
-      La oración del explorador nos dice “Conﬁando Señor, en tu bondad y en tu
+      La oración del explorador nos dice “Confiando Señor, en tu bondad y en tu
       gracia y y en el axilio maternal de Maria… Amén”. En medio de las
-      diﬁcultades, cuando creemos que todo está perdido, Dios siempre está y nos
+      dificultades, cuando creemos que todo está perdido, Dios siempre está y nos
       mueve a tener esperanza. Nos alienta a seguir adelante con la seguridad
       que Él nos acompaña, asiste y guía.
     </p>
@@ -421,13 +421,13 @@
     </p>
     <p>
       A veces se cae en el peligro de creer que Dios va a intervenir de acuerdo
-      a nuestro deseo, depositamos una conﬁanza equivocada que se sólo se
+      a nuestro deseo, depositamos una confianza equivocada que se sólo se
       fundamenta en querer tener un Dios a “nuestra medida”.
     </p>
     <p>
       También se suele pensar que Dios va a intervenir mágicamente y resolver
       todos los problemas que creamos los hombres, y como esto no sucede se le
-      echa la culpa. No es así la conﬁanza que el Papa nos plantea.
+      echa la culpa. No es así la confianza que el Papa nos plantea.
     </p>
   </body>
 </html>
